# markd

./: .gitignore  AGENTS.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  NOTARIZATION.md  PAGE_HIERARCHY_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  brand.md  components.json  idea.md  index.html  latest.json  notion-like-editor.md  package.json  rework.md  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
scripts/: check-macos-release.sh  create-macos-dmg.sh  finalize-macos-app.sh  generate-icns.sh  generate-latest-json.js  notarize-dmg.sh  (+8 more)
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_docs.rs  assets.rs  backlink_links.rs  backlinks.rs  backlinks_tests.rs  bookmarks.rs  cloud.rs  cloud_metadata.rs  cloud_publish.rs  commands.rs  config.rs  daily_notes.rs  error.rs  lib.rs  link_meta.rs  linux_webkit.rs  main.rs  notes.rs  pins.rs  quick_capture.rs  search.rs  state.rs  todos.rs  util.rs  vault.rs
src-tauri/src/commands/: app.rs  bookmarks.rs  export.rs  folders.rs  mod.rs  notes.rs  page_links.rs  search.rs  sticky_notes.rs  visual_identity.rs
src-tauri/src/models/: bookmark.rs  folder.rs  mod.rs  note.rs  sticky_note.rs  tag.rs  visual_identity.rs
src-tauri/src/services/: batch_indexer.rs  database.rs  file_service.rs  migrations.rs  mod.rs  save_queue.rs  search_service.rs  trash_cleanup.rs  url_metadata.rs  visual_identity.rs
src-tauri/src/utils/: json_utils.rs  mod.rs  validation.rs
src-tauri/tests/: integration_test.rs
(+417 files in other folders)
