[package]
name = "Markd"
version = "0.1.5"
description = "Local-first markdown notes"
authors = ["Saurabh"]
license = "MIT"
edition = "2021"
default-run = "Markd"

[lib]
name = "markd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "gzip", "json"] }
scraper = "0.23"
trash = "5"
regex = "1"
tauri-plugin-global-shortcut = "2"
sha2 = "0.10"
base64 = "0.22"
futures-util = "0.3"
infer = "0.19"

[dev-dependencies]
tempfile = "3"
